further modules automated : alphanode, nodeapp, interchanges, commands

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,086</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">322,489</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.K_RoutesTest</td><td><a href="#m0">adminlogin</a></td><td rowspan="1">1749903939916</td><td rowspan="1">354</td></tr><tr class="passedeven"><td><a href="#m1">editRoutes</a></td><td rowspan="1">1749903942159</td><td rowspan="1">29164</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.L_CommandsTest</td><td><a href="#m0">adminlogin</a></td><td rowspan="1">1750399988905</td><td rowspan="1">308</td></tr><tr class="passedeven"><td><a href="#m1">commandsFunTests</a></td><td rowspan="1">1750400232655</td><td rowspan="1">65436</td></tr><tr class="passedeven"><td><a href="#m2">commandsTests</a></td><td rowspan="1">1750399989220</td><td rowspan="1">243427</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.K_RoutesTest#adminlogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.K_RoutesTest#editRoutes</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>CG_value2</td><td>route_tr</td><td>route_td</td><td>route_tdbtn</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.L_CommandsTest#adminlogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.L_CommandsTest#commandsFunTests</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.L_CommandsTest#commandsTests</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
