--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--2078165003\testng-customsuite.xml</span>
+                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--1683710521\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>1 group</span>
+                    <span>2 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.K_RoutesTest" class="method navigator-link" hash-for-method="adminlogin">adminlogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.L_CommandsTest" class="method navigator-link" hash-for-method="adminlogin">adminlogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.K_RoutesTest" class="method navigator-link" hash-for-method="editRoutes(CG_value2, route_tr, route_td, route_tdbtn)">editRoutes(CG_value2, route_tr, route_td, route_tdbtn)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.L_CommandsTest" class="method navigator-link" hash-for-method="commandsFunTests">commandsFunTests</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.L_CommandsTest" class="method navigator-link" hash-for-method="commandsTests">commandsTests</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,7 +131,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.K_RoutesTest</span>
+              <span class="class-name">tests.L_CommandsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -138,10 +143,16 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="editRoutes(CG_value2, route_tr, route_td, route_tdbtn)">
-                  </a> <!-- editRoutes(CG_value2, route_tr, route_td, route_tdbtn) -->
-                  <span class="method-name">editRoutes</span>
-                  <span class="parameters">(CG_value2,route_tr,route_td,route_tdbtn)</span>
+                  <a name="commandsFunTests">
+                  </a> <!-- commandsFunTests -->
+                  <span class="method-name">commandsFunTests</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="commandsTests">
+                  </a> <!-- commandsTests -->
+                  <span class="method-name">commandsTests</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--2078165003\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--1683710521\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +169,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.K_RoutesTest&quot;/&gt;
+      &lt;class name=&quot;tests.L_CommandsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -183,10 +194,18 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
+              <span class="test-group-name">functionTesting</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">commandsFunTests</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
               <span class="test-group-name">reggrsn1</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">editRoutes</span>
+                <span class="method-in-group-name">commandsTests</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -206,20 +225,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'editRoutes')
-data.setCell(0, 2, 'tests.K_RoutesTest')
-data.setCell(0, 3, 29164);
+data.setCell(0, 1, 'commandsTests')
+data.setCell(0, 2, 'tests.L_CommandsTest')
+data.setCell(0, 3, 243427);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'adminlogin')
-data.setCell(1, 2, 'tests.K_RoutesTest')
-data.setCell(1, 3, 354);
+data.setCell(1, 1, 'commandsFunTests')
+data.setCell(1, 2, 'tests.L_CommandsTest')
+data.setCell(1, 3, 65436);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'adminlogin')
+data.setCell(2, 2, 'tests.L_CommandsTest')
+data.setCell(2, 3, 308);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 seconds</span>
+              <span class="suite-total-time">Total running time: 5 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -245,22 +268,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.K_RoutesTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.L_CommandsTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">adminlogin</span>
-                <span class="method-start">5257 ms</span>
+                <span class="method-start">12493 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">editRoutes(CG_value2, route_tr, route_td, route_tdbtn)</span>
-                <span class="method-start">7500 ms</span>
+                <span class="method-name">commandsTests</span>
+                <span class="method-start">12808 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">commandsFunTests</span>
+                <span class="method-start">256243 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">36678 ms</span>
+                <span class="method-start">321685 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
